# short-url

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: db.sql  lib.rs
src/middleware/: validator.rs
src/models/: access_log.rs  link.rs  mod.rs
src/service/: access_log.rs  link.rs
src/utils/: helpers.rs
static/css/: style.css
templates/: disabled.html.tera  expired.html.tera  index.html.tera  layout.html.tera
templates/error/: 404.html.tera
web/: .env.development  README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx
web/src/api/: api.ts  index.ts  typings.d.ts
web/src/components/: AddFormDialog.tsx  ChangeExpiredDialog.tsx  ChangeStatusDialog.tsx  LinkTable.tsx  ProTip.tsx  SnackAlert.tsx
web/src/config/: constants.ts
web/src/hooks/: alert.ts  index.ts
web/src/service/: index.ts  service.ts
web/src/styles/: global.css
