[package]
name = "short-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-files = "0.6"
chrono = "0.4"
env_logger = "0.10.1"
moka = { version = "0.12.3", features = ["future"] }
log = "0.4.20"
rand = "0.8.4"
sea-orm = { version = "0.12.10", features = ["macros", "runtime-actix-rustls", "sqlx-mysql"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
tera = "1.19.1"
url = "2.2.0"
