[package]
name = "short-url"
version = "0.1.0"
edition = "2021"
authors = ["Arron"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-files = "0.6"
actix-cors = "0.7.0"
chrono = "0.4"
env_logger = "0.11.3"
moka = { version = "0.12.3", features = ["future"] }
log = "0.4.20"
rand = "0.8.4"
sea-orm = { version = "0.12.10", features = ["macros", "runtime-actix-rustls", "sqlx-mysql"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.6"
tera = "1.19.1"
url = "2.2.0"
sha-1 = "0.10.0"
sha2 = "0.10.0"
hex = "0.4.3"
md5 = "0.7.0"
futures-util = "0.3.30"
num-traits = "0.2.17"
num-derive = "0.4.1"

[profile.release]
debug = true

[package.metadata.cargo-machete]
ignored = ["sha-1"]
